--- a/public/css/mobile-styles.css
+++ b/public/css/mobile-styles.css
@@ -21,6 +21,14 @@
         display: none;
     }
 
+    #bg_menu_content, #bg_custom_content {
+        grid-template-columns: repeat(var(--bg-thumb-columns, 3), 1fr);
+    }
+
+    .bg_list {
+        width: unset;
+    }
+
     .bg_button {
         font-size: 15px;
     }
@@ -40,6 +48,11 @@
         z-index: 4;
     }
 
+    .bg_example.mobile-menu-open .mobile-only-menu-toggle {
+        opacity: 0;
+        pointer-events: none;
+    }
+
     .bg_example .mobile-only-menu-toggle {
         display: flex;
         align-items: center;
@@ -55,6 +68,11 @@
         z-index: 3;
         cursor: pointer;
         backdrop-filter: blur(2px);
+    }
+
+    .bg_example .jg-button {
+        width: 30px;
+        height: 30px;
     }
 
     #bg-header-controls {
@@ -428,10 +446,6 @@
 
     .horde_multiple_hint {
         display: none;
-    }
-
-    .bg_list {
-        width: unset;
     }
 }
 
