vert center mobile char list back button

--- a/public/css/mobile-styles.css
+++ b/public/css/mobile-styles.css
@@ -19,6 +19,10 @@
         font-size: 3em;
     }
 
+    #CharListButtonAndHotSwaps {
+        align-items: center;
+    }
+
 
     #send_form.compact #leftSendForm,
     #send_form.compact #rightSendForm {
