Update BG header layout (#4519)
* init

* cleanup

* logic changes and some styling

* set z index to a reasonable value

* remove pointless animation

* cleanup

* restore animation

* checkmark icon on selected background

* drop shadow

* tweak size slightly

* Apply suggestion from @Cohee1207

condense

Co-authored-by: Cohee <18619528+Cohee1207@users.noreply.github.com>

* more of the above

* make lock indicator use a class like the selection indicator

* make backgroundHighlight run on page load

* cleanup

* html restructure and display: contents. only issue left is slightly wonky desktop buttons order

* yellow lock icon for consistancy

* Update layout

* Restore fitting logic

* Styles clean-up

* Remove duplicate class

* Restore button titles

* Fix return types of slash commands

* Update locked background on select if lock status is on

* Force header to 100% width

* Clean-up styles

* Fix locked highlight on custom backgrounds

* Revert global lock button

---------

Co-authored-by: Cohee <18619528+Cohee1207@users.noreply.github.com>

--- a/public/css/mobile-styles.css
+++ b/public/css/mobile-styles.css
@@ -88,48 +88,8 @@
         height: 30px;
     }
 
-    #bg-header-controls {
-        flex-wrap: wrap;
-        row-gap: 10px;
-    }
-
-    #bg-header-fixed>.flex-container {
-        flex-wrap: wrap;
-        row-gap: 0px;
-    }
-
-    #Backgrounds:not(.selection-mode-active) #bg-header-fixed>.flex-container::after {
-        content: '';
-        order: 1;
-        flex-basis: 100%;
-        height: 0;
-    }
-
-    /* --- Row 1 Item --- */
-    #bg-header-fixed #bg-header-title {
-        order: 1;
-        flex-grow: 1;
-    }
-
-    #bg-header-fixed #background_fitting,
-    #bg-header-fixed #auto_background {
-        order: 1;
-    }
-
-    /* --- Row 2 Item --- */
-    #bg-header-fixed #bg-filter {
-        order: 2;
-        flex-grow: 1;
-        min-width: 0;
-    }
-
-    /* --- Row 3 Item --- */
-    #bg-header-fixed #add_background_button_top {
-        order: 3;
-        width: 100%;
-        text-align: center;
-        padding-top: 0.5em;
-        padding-bottom: 0.5em;
+    #background_fitting {
+        max-width: 6em;
     }
 
     #Backgrounds.drawer-content.openDrawer.bg-drawer-layout {
