--- a/public/style.css
+++ b/public/style.css
@@ -599,6 +599,14 @@ input[type='checkbox']:focus-visible {
     max-height: var(--doc-height);
 }
 
+.mes_reasoning_details[data-state="thinking"] .mes_reasoning .text_segment,
+.mes_text .text_segment {
+    animation-name: fade-in;
+    animation-timing-function: ease-in-out;
+    /* Not using variables for duration as they are zeroed when reduced motion is enabled */
+    animation-duration: 300ms;
+}
+
 .mes .mes_timer,
 .mes .mesIDDisplay,
 .mes .tokenCounterDisplay {
